# Sleight-of-Hand

./: README.md  demo.py  pyproject.toml
results/: ga_best_genome.json  win_rate_matrix.csv
scripts/: ablation.py  play.py  plot_belief_convergence.py  run_all_experiments.py  run_baseline_eval.py  run_exploitability.py  run_ga.py
sleight_of_hand/: __init__.py
sleight_of_hand/agents/: __init__.py  base.py  baselines.py  bayes_search_agent.py  human.py
sleight_of_hand/bayes/: __init__.py  opponent_model.py
sleight_of_hand/engine/: __init__.py  actions.py  cards.py  game.py  state.py
sleight_of_hand/eval/: __init__.py  belief_accuracy.py  exploitability.py  harness.py  plotting.py
sleight_of_hand/ga/: __init__.py  evolve.py  genome.py
sleight_of_hand/policy/: __init__.py  heuristic.py
sleight_of_hand/search/: __init__.py  expectiminimax.py
tests/: test_baselines_and_harness.py  test_bayes.py  test_engine.py  test_eval_extras.py  test_ga.py  test_policy.py  test_search.py
